[gd_scene load_steps=2 format=3 uid="uid://6hi1scpvjjfp"]

[ext_resource type="Script" uid="uid://oscyudp6ecig" path="res://interwave_ui.gd" id="1_otxjc"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_otxjc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="stat" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "stat"

[node name="plant" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "plant"

[node name="seed" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "seed"

[connection signal="button_down" from="HBoxContainer/stat" to="." method="_stat_picked"]
[connection signal="button_down" from="HBoxContainer/plant" to="." method="_plant_picked"]
[connection signal="button_down" from="HBoxContainer/seed" to="." method="_seed_picked"]
